--- a/book.toml
+++ b/book.toml
@@ -1,6 +1,6 @@
 [book]
-authors = ["HoiLen"]
+authors = ["Nanaha"]
 language = "en"
 multilingual = false
 src = "src"
-title = "HoiLenBook"
+title = "NanahaBook"
